netcfg (1.30) UNRELEASED; urgency=low

  * Improve wording of wireless network type template.

 -- Frans Pop <fjp@debian.org>  Mon, 21 Aug 2006 01:20:46 +0200

netcfg (1.29) unstable; urgency=low

  [ Christian Perrier ]
  * Unmark ${wifireconf} as translatable in templates

  [ Frans Pop ]
  * Set up the loopback interface with address 127.0.0.1/8.
  * Also set up the loopback interface when doing static configuration.
    Closes: #381085.
  * Remove standards-version and add Lintian override for it.

  [ Updated translations ]
  * Catalan (ca.po) by Jordi Mallach
  * German (de.po) by Jens Seidel
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Finnish (fi.po) by Tapio Lehtonen
  * Hungarian (hu.po) by SZERVÁC Attila
  * Panjabi (pa.po) by A S Alam
  * Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
  * Swedish (sv.po) by Daniel Nylander
  * Ukrainian (uk.po) by Eugeniy Meshcheryakov
  * Traditional Chinese (zh_TW.po) by Tetralet

 -- Frans Pop <fjp@debian.org>  Mon, 21 Aug 2006 01:06:55 +0200

netcfg (1.28) unstable; urgency=low

  [ Philip Hands ]
  * killall.sh: optimise out the greps.

  [ Updated translations ]
  * Estonian (et.po) by Siim Põder
  * Galician (gl.po) by Jacobo Tarrio
  * Gujarati (gu.po) by Kartik Mistry
  * Bokmål, Norwegian (nb.po) by Bjørn Steensrud
  * Dutch (nl.po) by Bart Cornelis
  * Norwegian Nynorsk (nn.po) by Håvard Korsvoll
  * Thai (th.po) by Theppitak Karoonboonyanan

 -- Frans Pop <fjp@debian.org>  Thu, 13 Jul 2006 17:15:47 +0200

netcfg (1.27) unstable; urgency=low

  * Remove the now useless mapping clause from the interfaces file.
    Closes: #367264

 -- Joey Hess <joeyh@debian.org>  Thu, 15 Jun 2006 19:21:13 -0400

netcfg (1.26) unstable; urgency=low

  [ Christian Perrier ]
  * Take advantage of the new po-debconf commenting capabilities
    and adapt translators comment to it
  * Split _Choices to __choices in templates

  [ Bastian Blank ]
  * Ignore sit devices.

  [ Colin Watson ]